# AI-Powered-Recommendation-System

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  prometheus.yml  pyproject.toml  requirements.txt
alembic/: env.py
src/recommendation_system/: __init__.py  cli.py  config.py  schemas.py
src/recommendation_system/api/: __init__.py  app.py
src/recommendation_system/database/: __init__.py  connection.py  models.py  repository.py
src/recommendation_system/middleware/: __init__.py  cache.py  rate_limiter.py
src/recommendation_system/models/: __init__.py  collaborative.py  content_based.py  hybrid.py
src/recommendation_system/services/: data_store.py  recommendation_service.py
src/recommendation_system/tasks/: __init__.py  training.py
src/recommendation_system/utils/: data_loader.py  logging.py  sample_data.py
tests/: __init__.py  conftest.py  test_api.py  test_data_store.py  test_models.py
